--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="is-preload">
 
@@ -19,10 +19,10 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Smart Bin<br /></h1>
+									<h1 class="major">title 1<br /></h1>
 									
-									<p>Our</p><strong>Smart Bin is</strong><p>has an implanted Arduino card directly connected to a digital screen displaying specific info.
-                    These details will get collected via a scale sensor installed at the bottom of the bin. They will get saved in a micro sd chip. </p>
+									<!--<p>Our</p><strong>Smart Bin is</strong><p>has an implanted Arduino card directly connected to a digital screen displaying specific info.
+                    These details will get collected via a scale sensor installed at the bottom of the bin. They will get saved in a micro sd chip. </p>-->
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -35,8 +35,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Smart cities</h2>
-									<p>smart cities is....</p>
+									<h2 class="major">title 2</h2>
+									<p>...</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="assets/images/tsyp2.jpg" alt="" />
@@ -46,8 +46,8 @@
 						<!-- Panel -->
             <section class="panel spotlight large left">
               <div class="content span-5">
-                <h2 class="major">bin mldaresna</h2>
-                <p>bin mdaresna is....</p>
+                <h2 class="major">title 3</h2>
+                <p>...</p>
               </div>
               <div class="image filtered tinted" data-position="top right">
                 <img src="assets/images/tsyp6.jpg" alt="" />
@@ -57,8 +57,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Integration day</h2>
-									<p>in our integration day....</p>
+									<h2 class="major">title 3</h2>
+									<p>...</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="assets/images/tsyp4.jpg" alt="" />
@@ -67,10 +67,7 @@
 
 						<!-- Panel -->
 							<section class="panel">
-								<div class="intro color2">
-									<h2 class="major">collab with sight <section></section></h2>
-									<p>sight section...</p>
-								</div>
+								
 								<div class="gallery">
 									<div class="group span-3">
 										<a href="assets/images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="assets/images/gallery/thumbs/01.jpg" alt="" /></a>
